--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -7,61 +7,83 @@ url = ""
 weight = 1
 
 [[main]]
-name = "About"
-url = "about/"
+name = "Features"
+url = "features/"
 weight = 2
 
+[[main]]
+weight = 3
+name = "Industries"
+hasChildren = true
+
+  [[main]]
+  parent = "Industries"
+  name = "Healthcare"
+  url = "industries/healthcare/"
+  weight = 1
+
+  [[main]]
+  parent = "Industries"
+  name = "Food Service"
+  url = "industries/food-service/"
+  weight = 2
+
+  [[main]]
+  parent = "Industries"
+  name = "Industrial"
+  url = "industries/industrial/"
+  weight = 3
+
+[[main]]
+name = "Pricing"
+url = "pricing/"
+weight = 4
 
 [[main]]
 name = "Blog"
 url = "blog/"
-weight = 3
-
-[[main]]
-weight = 4
-name = "Pages"
-hasChildren = true
-
-  [[main]]
-  parent = "Pages"
-  name = "Blog Details"
-  url = "blog/post-1/"
-  weight = 1
-
-
-  [[main]]
-  parent = "Pages"
-  name = "Terms & Conditions"
-  url = "terms-and-conditions/"
-  weight = 2
+weight = 5
 
 [[main]]
 name = "Contact"
 url = "contact/"
-weight = 5
-
-
+weight = 6
 
 
 
 
 # footer menu
 [[footer]]
-name = "About"
-url = "about/"
+name = "Features"
+url = "features/"
 weight = 1
+
+[[footer]]
+name = "Pricing"
+url = "pricing/"
+weight = 2
+
+[[footer]]
+name = "Healthcare"
+url = "industries/healthcare/"
+weight = 3
+
+[[footer]]
+name = "Food Service"
+url = "industries/food-service/"
+weight = 4
 
 [[footer]]
 name = "Blog"
 url = "blog/"
-weight = 2
+weight = 5
 
 [[footer]]
-name = "Blog Details"
-url = "blog/post-1/"
-weight = 3
+name = "Contact"
+url = "contact/"
+weight = 6
 
 [[footer]]
 name = "Terms & Conditions"
 url = "terms-and-conditions/"
-weight = 4
+weight = 7
