--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -23,16 +23,16 @@ logo_width = "257px"
 # if logo_webp set false, it will not generate WEBP version of logo | default is true
 logo_webp = true
 # logo text will only show when logo is missing.
-logo_text = "Andromeda"
+logo_text = "Cool Track"
 
 # footer information
-footer_info = "Lorem ipsum dolor sit sed dmi amet, consectetur adipiscing. Cdo tellus, sed condimentum volutpat."
+footer_info = "Cool Track provides intelligent temperature monitoring, alerts, and logging for healthcare, food service, and industrial applications. Protect your temperature-sensitive assets with 24/7 automated monitoring and instant alerts."
 
 # contact form action
 contact_form_action = "https://formspree.io/f/xgernlzd" # contact form works with https://formspree.io
 
 # buy premium popup
-buy_premium_popup = true
+buy_premium_popup = false
 
 # custom script on header, example: custom_script= "<script>console.log(\"Hello World\")</script>" 
 custom_script= "" 
@@ -42,9 +42,9 @@ mainSections= ["blog"]
 
 # contact information
 [contact_info]
-address = "2118 Thornridge Cir. Syracuse, Connecticut 35624"
-phone = ["+704-555-0127", "+205-857-2321", "+002-569-6969"]
-email = ["info@andromeda.io", "smith@anderson.io", "john@anderson.io"]
+address = "123 Temperature Way, Suite 100, San Francisco, CA 94105"
+phone = ["+1-800-COOLTRACK", "+1-415-555-0100", "+1-415-555-0200"]
+email = ["support@cooltrack.com", "sales@cooltrack.com", "info@cooltrack.com"]
 
 # Preloader 
 # module: https://github.com/gethugothemes/hugo-modules/tree/master/components/preloader
@@ -55,16 +55,16 @@ preloader = "images/favicon.png" # use jpg, png, svg or gif format.
 # Navigation button
 [navigation_button]
 enable = true
-label = "Buy Premium"
-link = "https://gethugothemes.com/products/andromeda/"
+label = "Start Free Trial"
+link = "#trial"
 
 
 # seo meta data for OpenGraph / Twitter Card
 # seo module: https://github.com/gethugothemes/hugo-modules/tree/master/seo-tools/basic-seo
 [metadata]
-keywords = ["Hugo", "GetHugoThemes", "Themefisher"]
-description = "Software and SAAS Landing Hugo Theme"
-author = "Gethugothemes"
+keywords = ["temperature monitoring", "temperature sensor", "wireless temperature sensor", "temperature monitoring system", "FDA compliance", "HACCP compliance", "cold chain monitoring", "refrigerator monitoring", "freezer monitoring", "pharmaceutical temperature monitoring", "food safety monitoring", "IoT temperature sensors"]
+description = "Cool Track: Intelligent temperature monitoring with real-time alerts, cloud logging, and 24/7 protection. FDA & HACCP compliant. Perfect for healthcare, food service, and industrial applications."
+author = "Cool Track"
 image = "images/og-image.jpg" # this image will be used as fallback if a page has no image of its own
 
 # matomo tracking: see https://matomo.org/
@@ -117,7 +117,7 @@ button = "I Accept"
 # call-to-action
 [cta]
 enable = true
-title = "Helping teams in the world with focus"
-content = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi egestas <br> Werat viverra id et aliquet. vulputate egestas sollicitudin."
-button = "Buy Premium"
-button_link = "https://gethugothemes.com/products/andromeda/"
+title = "Ready to protect your temperature-sensitive assets?"
+content = "Start your 30-day free trial today. No credit card required. <br> Join hundreds of businesses that trust Cool Track for 24/7 temperature monitoring."
+button = "Start Free Trial"
+button_link = "#trial"
