Production optimization: Performance, caching, and deployment infrastructure
- Add production server infrastructure (Caddy, Cloudflare Tunnel, maintenance mode)
- Add comprehensive management scripts (build, status, maintenance control)
- Optimize Hugo configuration: minification, image processing, caching
- Enhance Caddyfile: Brotli/Gzip compression, layered caching, CSP headers
- Optimize JavaScript: request animation frame, passive listeners, defensive checks
- Improve resource loading: DNS prefetch, preconnect, optimized font loading
- Add plugins configuration file for better organization
- Update copyright and documentation
- Improve .gitignore for build artifacts and logs

Performance improvements:
- Reduced JavaScript redundancy and improved event handlers
- Added lazy loading for iframes
- Optimized Swiper carousel initialization with feature detection
- Enhanced preloader with multiple fallbacks
- Better font loading with session storage caching

Security improvements:
- Content Security Policy headers
- Permissions Policy restrictions
- Enhanced security headers in Caddyfile

Architecture improvements:
- Separated concerns (plugins config)
- Better error handling in JavaScript
- Cleaner build and deployment workflow

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ Thumbs.db
 # Temporary files
 *.log
 .hugo_build.lock
+hugo_stats.json
+build.log
+caddy.log
+
+# Backup files
+Caddyfile.production
+*.backup
+*~
