--- a/Caddyfile
+++ b/Caddyfile
@@ -8,6 +8,7 @@
 
 # Listen on port 8080 (Cloudflare Tunnel will connect here)
 :8080 {
+    bind 0.0.0.0
     # Serve the Hugo-generated static files
     root * /home/hugo/cooltrack-website/public
     
@@ -35,7 +36,7 @@
         # Referrer policy
         Referrer-Policy "strict-origin-when-cross-origin"
         # Content Security Policy (adjust as needed)
-        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://ajax.googleapis.com https://formspree.io; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com; font-src 'self' data: https://fonts.gstatic.com https://use.fontawesome.com https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https://formspree.io; frame-src https://www.youtube.com https://player.vimeo.com;"
+        Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://ajax.googleapis.com https://formspree.io; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net; font-src 'self' data: https://fonts.gstatic.com https://use.fontawesome.com https://cdnjs.cloudflare.com; img-src 'self' data: https:; connect-src 'self' https://formspree.io; frame-src https://www.youtube.com https://player.vimeo.com;"
         # Permissions Policy
         Permissions-Policy "geolocation=(), microphone=(), camera=()"
         # Remove Server header
@@ -44,8 +45,7 @@
     
     # Cache static assets (images, CSS, JS) - 1 year for fingerprinted assets
     @static_fingerprinted {
-        path_regexp .*\.(css|js)\?.*
-        path_regexp .*-[a-f0-9]{8,64}\.(css|js|woff|woff2|ttf|eot)
+        path_regexp \.(css|js)(\?.*)?$
     }
     header @static_fingerprinted {
         Cache-Control "public, max-age=31536000, immutable"
