--- a/config/_default/plugins.toml
+++ b/config/_default/plugins.toml
@@ -8,7 +8,7 @@ link = "https://cdnjs.cloudflare.com/ajax/libs/line-awesome/1.3.0/css/line-aweso
 link = "https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
 
 [[params.plugins.css]]
-link = "https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css"
+link = "plugins/aos/aos.css"
 
 # JS Plugins
 [[params.plugins.js]]
